[tool.poetry]
name = "asynchronous-kafka"
version = "0.1.0"
description = ""
authors = ["Victor Gomez <victor.g@datyra.com>"]
readme = "README.md"
packages = [{include = "asynchronous_kafka"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
aiokafka = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
